Fixing overflow on tile authors

--- a/_tiles.styl
+++ b/_tiles.styl
@@ -159,6 +159,10 @@ tiles()
 		time
 			font-size type-small
 			font-weight normal
+	.tile-author
+		width box-width - 2 * tile-header-height - 20px
+	.-rss .tile-author
+		width box-width - tile-header-height - 20px // no avatar on RSS
 	.tile-avatar
 	.tile-icon
 		height tile-header-height
